--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"><meta name="author" content="Jesse Fong">
-<title>Blog | Jesse Fong</title>
-<meta property="og:title" content="Blog">
-<meta name="twitter:title" content="Blog">
-<link rel="canonical" href="http://jessefong.com/blog">
+<title> About  | Jesse Fong</title>
+<meta property="og:title" content=" About ">
+<meta name="twitter:title" content=" About ">
+<link rel="canonical" href="http://jessefong.com/about">
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://jessefong.com/blog">
+<meta property="og:url" content="http://jessefong.com/about">
 <meta property="og:site_name" content="Jesse Fong">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@JesseTheFong">
@@ -39,13 +39,8 @@
 	</div>
 </div><div class="page_content">
 <div class="header_image_container"><div class="header_image" style="background-image:url(' data/koi.png');"></div></div>
-<h1>Blog</h1>
-<p>The following blog posts explore my experiences with different technical problems, the solutions I've found, and my thoughts about them. I hope you enjoy!</p><table style="width:100%;padding-right:5%;"<tbody><tr><td><a href="blog_learning_to_program.html">
-<div class="feature_button_image" style="background-image: url('data/learning_to_program.jpg');"></div></a></td></tr>
-<tr><td class="feature_button_title"><a class="link" href="blog_learning_to_program.html">(01/04/2019) A Guide To Learning To Program
-</a></td></tr>
-<tr><td class="feature_button_description">My thoughts on the progression of learning to program a CPU and the state of programming education
-</td></tr></tbody></table>
+<h1> About </h1>
+<p>Hi, I'm Jesse. This is placeholder text for my about me page.</p><a href=" data/me.jpg "><div class="image_container"><img class="image" src=" data/me.jpg "></div></a>
 </div>
 <div class="separator reverse"></div>
 <div class="footer">
