updated style sheet

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"><meta name="author" content="Jesse Fong">
-<title> About  | Jesse Fong</title>
+<title> About | Jesse Fong</title>
 <meta property="og:title" content=" About ">
 <meta name="twitter:title" content=" About ">
 <link rel="canonical" href="http://jessefong.com/about">
@@ -32,15 +32,18 @@
         <td><a href="index.html" class="header_link">Blog</a></td>
         <td><a href="projects.html" class="header_link">Projects</a></td>
         <td><a href="about.html" class="header_link">About</a></td>
-        <td><a href="contact.html" class="header_link">Contact</a></td>
 	</tr>
 	</tbody>
 	</table>
 	</div>
 </div><div class="page_content">
-<div class="header_image_container"><div class="header_image" style="background-image:url(' data/koi.png');"></div></div>
+<div class="header_image_container"><div class="header_image" style="background-image:url('data/cat.PNG');"></div></div>
 <h1> About </h1>
-<p>Hi, I'm Jesse. This is placeholder text for my about me page.</p><a href=" data/me.jpg "><div class="image_container"><img class="image" src=" data/me.jpg "></div></a>
+<hr>
+<p>Hi, I'm Jesse. I'm from Hawaii and currently live in Seattle. I was in the film industry in LA when I started learning programming on my own.
+I quickly became interested in low level programming focusing on real-time simulation.
+<br><br>
+If you would like to contact me, feel free to at <a class="link" href="mailto:fong.jes@gmail.com">fong.jes@gmail.com</a></p>
 </div>
 <div class="separator reverse"></div>
 <div class="footer">
