--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,12 @@
         <td><a href="index.html" class="header_link">Blog</a></td>
         <td><a href="projects.html" class="header_link">Projects</a></td>
         <td><a href="about.html" class="header_link">About</a></td>
-        <td><a href="contact.html" class="header_link">Contact</a></td>
 	</tr>
 	</tbody>
 	</table>
 	</div>
 </div><div class="page_content">
-<div class="header_image_container"><div class="header_image" style="background-image:url(' data/koi.png');"></div></div>
+<div class="header_image_container"><div class="header_image" style="background-image:url('data/opihi.PNG');"></div></div>
 <h1>Contact</h1>
 <p>Need some clarification? Want to correct something on a blogpost? Have an opinion on today's political landscape?
  
