--- a/projects.html
+++ b/projects.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"><meta name="author" content="Jesse Fong">
-<title> Projects  | Jesse Fong</title>
-<meta property="og:title" content=" Projects ">
-<meta name="twitter:title" content=" Projects ">
+<title>Projects | Jesse Fong</title>
+<meta property="og:title" content="Projects">
+<meta name="twitter:title" content="Projects">
+<meta name="description" content="A collection of my personal projects">
+<meta property="og:description" content="A collection of my personal projects">
+<meta name="twitter:description" content="View the album on Flickr.">
 <link rel="canonical" href="http://jessefong.com/projects">
 <meta property="og:type" content="website">
 <meta property="og:url" content="http://jessefong.com/projects">
@@ -32,26 +35,42 @@
         <td><a href="index.html" class="header_link">Blog</a></td>
         <td><a href="projects.html" class="header_link">Projects</a></td>
         <td><a href="about.html" class="header_link">About</a></td>
-        <td><a href="contact.html" class="header_link">Contact</a></td>
 	</tr>
 	</tbody>
 	</table>
 	</div>
 </div><div class="page_content">
-<div class="header_image_container"><div class="header_image" style="background-image:url(' data/koi.png');"></div></div>
-<h1> Projects </h1>
-<p>This is the page for all of my projects. If you are interested in looking through the source code for most of these, they are available at my <a class="link" href="https://bitbucket.org/JesseFong/">BitBucket</a></p><table style="width:100%;padding-right:5%;"<tbody><tr><td><a href="3d_editor.html">
-<div class="feature_button_image" style="background-image: url('data/3d_editor.png');"></div></a></td></tr>
-<tr><td class="feature_button_title"><a class="link" href="3d_editor.html">3D Editor
-</a></td></tr>
-<tr><td class="feature_button_description">A editor framework that focusing on the integration of 2D and 3D ui and data manipulation
-</td></tr></tbody></table>
-<table style="width:100%;padding-right:5%;"<tbody><tr><td><a href="koi.html">
-<div class="feature_button_image" style="background-image: url('data/koi.png');"></div></a></td></tr>
-<tr><td class="feature_button_title"><a class="link" href="koi.html">Koi
-</a></td></tr>
-<tr><td class="feature_button_description">A 2D game engine focusing on low-level control and ease of use
-</td></tr></tbody></table>
+<div class="header_image_container"><div class="header_image" style="background-image:url('data/shrimp.png');"></div></div>
+<h1> My Projects </h1>
+<hr>
+<h2>Game Engine</h2>
+<p>
+My personal game engine. Used as a conglomeration of various game technology that I have worked on. A few a which include:
+<br>-Separated deferred PBR renderer with OpenGL and DirectX backends
+<br>-Mesh skinning animation system
+<br>-Chunk based world streaming
+<br>-P2P Rollback Netcode with <a class="link" href="https://www.ggpo.net/">GGPO</a>
+<br>-An in game entity and level editor</p>
+<div class="thumbnail_image_container">
+<a href=" data/nidcrawl_screenshot.png "><img class="thumbnail_image" src=" data/nidcrawl_screenshot.png "></a>
+<a href=" data/nidcrawl_screenshot_online.png "><img class="thumbnail_image" src=" data/nidcrawl_screenshot_online.png "></a></div>
+<p>
+The art comes from KayKit over at <a class="link" href="https://kaylousberg.itch.io/kaykit-dungeon">their Itch.io page.</a></p><hr>
+<h2>Toy Renderer</h2>
+<p>My rendering test site that was designed for quick iteration.</p>
+<div class="thumbnail_image_container">
+<a href=" data/toy_renderer_example_1.png "><img class="thumbnail_image" src=" data/toy_renderer_example_1.png "></a>
+<a href=" data/toy_renderer_example_2.png "><img class="thumbnail_image" src=" data/toy_renderer_example_2.png "></a></div>
+<hr>
+<h2>Other Projects</h2>
+
+<p><a class ="link" href="https://github.com/JesseFong/">My GitHub</a><br><br>
+Some other smaller projects including a personal UI system, a minimal OpenGL setup with DSA functions, bindless textures and MultiDrawElementsIndirect.
+DirectX12 renderer with compute culling and bindless textures.</p>
+<div class="thumbnail_image_container">
+<a href=" data/ui_examples.png "><img class="thumbnail_image" src=" data/ui_examples.png "></a>
+<a href=" data/minimal_bindless_opengl.png "><img class="thumbnail_image" src=" data/minimal_bindless_opengl.png "></a>
+<a href=" data/koi_screenshot2.png"><img class="thumbnail_image" src=" data/koi_screenshot2.png"></a></div>
 </div>
 <div class="separator reverse"></div>
 <div class="footer">
