--- a/index.html
+++ b/index.html
@@ -32,19 +32,18 @@
         <td><a href="index.html" class="header_link">Blog</a></td>
         <td><a href="projects.html" class="header_link">Projects</a></td>
         <td><a href="about.html" class="header_link">About</a></td>
-        <td><a href="contact.html" class="header_link">Contact</a></td>
 	</tr>
 	</tbody>
 	</table>
 	</div>
 </div><div class="page_content">
-<div class="header_image_container"><div class="header_image" style="background-image:url(' data/koi.png');"></div></div>
+<div class="header_image_container"><div class="header_image" style="background-image:url('data/noodles.PNG');"></div></div>
 <h1>Blog</h1>
-<p>The following blog posts explore my experiences with different technical problems, the solutions I've found, and my thoughts about them. I hope you enjoy!</p><table style="width:100%;padding-right:5%;"<tbody><tr><td><a href="blog_learning_to_program.html">
-<div class="feature_button_image" style="background-image: url('data/learning_to_program.jpg');"></div></a></td></tr>
-<tr><td class="feature_button_title"><a class="link" href="blog_learning_to_program.html">(01/04/2019) A Guide To Learning To Program
+<hr><table style="width:100%;padding-right:5%;"<tbody><tr><td><a href="blog_modern_opengl.html">
+<div class="feature_button_image" style="background-image: url('data/minimal_bindless_opengl.PNG');"></div></a></td></tr>
+<tr><td class="feature_button_title"><a class="link" href="blog_modern_opengl.html">[06/20/2021] Leveraging Modern OpenGL for a Simple Rendering API
 </a></td></tr>
-<tr><td class="feature_button_description">My thoughts on the progression of learning to program a CPU and the state of programming education
+<tr><td class="feature_button_description">An overview of a subset of OpenGL that works like modern API's
 </td></tr></tbody></table>
 </div>
 <div class="separator reverse"></div>
