fixed some data extensions

--- a/blog_modern_opengl.html
+++ b/blog_modern_opengl.html
@@ -37,7 +37,7 @@
 	</table>
 	</div>
 </div><div class="page_content">
-<div class="header_image_container"><div class="header_image" style="background-image:url('data/minimal_bindless_opengl.PNG');"></div></div>
+<div class="header_image_container"><div class="header_image" style="background-image:url('data/minimal_bindless_opengl.png');"></div></div>
 <div class="standalone_link_container"><a class="link" href="index.html">Back</a></div><h1>Leveraging Modern OpenGL (4.5) For A Simple Rendering API</h1>
 <h2>20 June 2021</h2>
 <p><a class="link" href="https://github.com/JesseFong/minimal_modern_opengl">The full source of this sample can be found here</a><br><br>
