--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 	</table>
 	</div>
 </div><div class="page_content">
-<div class="header_image_container"><div class="header_image" style="background-image:url('data/noodles.PNG');"></div></div>
+<div class="header_image_container"><div class="header_image" style="background-image:url('data/noodles.png');"></div></div>
 <h1>Blog</h1>
 <hr><table style="width:100%;padding-right:5%;"<tbody><tr><td><a href="blog_modern_opengl.html">
-<div class="feature_button_image" style="background-image: url('data/minimal_bindless_opengl.PNG');"></div></a></td></tr>
+<div class="feature_button_image" style="background-image: url('data/minimal_bindless_opengl.png');"></div></a></td></tr>
 <tr><td class="feature_button_title"><a class="link" href="blog_modern_opengl.html">[06/20/2021] Leveraging Modern OpenGL for a Simple Rendering API
 </a></td></tr>
 <tr><td class="feature_button_description">An overview of a subset of OpenGL that works like modern API's
