--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 	</table>
 	</div>
 </div><div class="page_content">
-<div class="header_image_container"><div class="header_image" style="background-image:url('data/cat.PNG');"></div></div>
+<div class="header_image_container"><div class="header_image" style="background-image:url('data/cat.png');"></div></div>
 <h1> About </h1>
 <hr>
 <p>Hi, I'm Jesse. I'm from Hawaii and currently live in Seattle. I was in the film industry in LA when I started learning programming on my own.
