--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 	</table>
 	</div>
 </div><div class="page_content">
-<div class="header_image_container"><div class="header_image" style="background-image:url('data/opihi.PNG');"></div></div>
+<div class="header_image_container"><div class="header_image" style="background-image:url('data/opihi.png');"></div></div>
 <h1>Contact</h1>
 <p>Need some clarification? Want to correct something on a blogpost? Have an opinion on today's political landscape?
  
