--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,8 @@ My personal game engine. Used as a conglomeration of various game technology tha
 <br>-An in game entity and level editor</p>
 <div class="thumbnail_image_container">
 <a href=" data/nidcrawl_screenshot.png "><img class="thumbnail_image" src=" data/nidcrawl_screenshot.png "></a>
-<a href=" data/nidcrawl_screenshot_online.png "><img class="thumbnail_image" src=" data/nidcrawl_screenshot_online.png "></a></div>
+<a href=" data/nidcrawl_screenshot_online.png "><img class="thumbnail_image" src=" data/nidcrawl_screenshot_online.png "></a>
+<a href=" data/nidcrawl_screenshot_3.png "><img class="thumbnail_image" src=" data/nidcrawl_screenshot_3.png "></a></div>
 <p>
 The art comes from KayKit over at <a class="link" href="https://kaylousberg.itch.io/kaykit-dungeon">their Itch.io page.</a></p><hr>
 <h2>Toy Renderer</h2>
